<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Workouter</string>
    <string name="nav_header_subtitle">Fitness Planner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_training">Training</string>
    <string name="menu_workouts">Workouts</string>
    <string name="menu_exercises">Exercises</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_settings">Settings</string>

    <string name="configuration">Configuration</string>
    <string name="app_settings">App Settings</string>

    <string name="text_foreground_color">Foreground color</string>
    <string name="text_background_color">Background color</string>

    <string name="preview_color">Preview color</string>
    <string name="text_import_export">Import / Export</string>
    <string name="text_import">Import</string>
    <string name="text_export">Export</string>
    <string name="text_path">Path</string>
    <string name="text_config_restored">Configuration restored</string>
    <string name="text_config_exported">Configuration exported</string>
    <string name="text_loaded_xml_backup">XML Backup restored</string>

    <string name="text_devices">Devices</string>
    <string name="text_difficulty">Difficulty</string>
    <string name="text_max_weight">Max weight</string>
    <string name="text_pers_max_weight">Personal max weight</string>
    <string name="text_weight_steps">Weight steps</string>
    <string name="text_name">Name</string>
    <string name="text_time">Time</string>
    <string name="text_rounds">Rounds</string>
    <string name="text_end_rounds">End. Rounds</string>
    <string name="text_rnds">Rnds</string>
    <string name="text_repetitions">Repetitions</string>
    <string name="text_end_repetitions">End. Repetitions</string>
    <string name="text_reps">Reps</string>
    <string name="text_rnd_reps">Repetitions\n/ Rounds</string>
    <string name="text_end_rnd_reps">Endurance\nReps/Rnds</string>
    <string name="text_percentage">%</string>
    <string name="text_max_weight_perc">Max Weight %</string>
    <string name="text_weekday">Weekday</string>
    <string name="text_add">Add</string>
    <string name="text_copy">Copy</string>
    <string name="text_remove">Remove</string>
    <string name="text_size">Text size</string>
    <string name="text_start_weight">Start weight</string>
    <string name="text_size_sample">Text size sample</string>
    <string name="text_ignore_percentage">Ignore Percentage</string>
    <string name="text_endurance">Endurance</string>
    <string name="text_end">Endur</string>
    <string name="text_order">Order</string>

    <string name="text_max">Max</string>
    <string name="text_pers">Pers Max</string>
    <string name="text_weight_time">Weight / Time</string>
    <string name="text_reps_rounds">Reps / Rounds</string>
    <string name="text_kg_or_lb">Display kg or lb</string>
    <string name="text_kg">kg</string>
    <string name="text_lb">lb</string>

    <string name="hint_difficulty">1.0 &#8211; 99.0</string>
    <string name="hint_weekday">1 (Mo) &#8211; 7 (Su)</string>
    <string name="hint_percentage">10% &#8211; 100%</string>
    <string name="hint_difficulty_high">1 &#8211; 999</string>
    <string name="hint_weight">1.0 &#8211; 999.0</string>
    <string name="hint_order">1 &#8211; 99</string>
    <string name="weekday_1">Monday</string>
    <string name="weekday_2">Tuesday</string>
    <string name="weekday_3">Wednesday</string>
    <string name="weekday_4">Thursday</string>
    <string name="weekday_5">Friday</string>
    <string name="weekday_6">Saturday</string>
    <string name="weekday_7">Sunday</string>
    <string name="unknown">Unknown</string>
    <string name="title_workouter">Workouter</string>

</resources>
