<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_trainings"
            android:title="@string/menu_training" />
    </group>

    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/nav_workouts"
                android:icon="@drawable/ic_menu_workouts"
                android:title="@string/menu_workouts" />
            <item
                android:id="@+id/nav_exercises"
                android:icon="@drawable/ic_menu_exercises"
                android:title="@string/menu_exercises" />
            <item
                android:id="@+id/nav_devices"
                android:icon="@drawable/ic_menu_devices"
                android:title="@string/menu_devices" />
        </menu>
    </item>

    <item android:title="@string/app_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
