<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_training">

    <fragment
        android:id="@+id/nav_training"
        android:name="email.kleck.android.workouter.ui.training.TrainingFragment"
        android:label="@string/menu_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_workouts"
        android:name="email.kleck.android.workouter.ui.workouts.WorkoutFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workouts" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="email.kleck.android.workouter.ui.exercises.ExerciseFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="email.kleck.android.workouter.ui.devices.DeviceFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="email.kleck.android.workouter.ui.settings.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>