<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/import_export_tv_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path" />

        <AutoCompleteTextView
            android:id="@+id/import_export_ac_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_import" />

        <Button
            android:id="@+id/btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_export" />

    </LinearLayout>

</LinearLayout>