<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_mainlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_foreground_color"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="57dp"
                    tools:layout_editor_absoluteY="114dp" />

                <ImageView
                    android:id="@+id/foreground_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/preview_color" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_fg_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <SeekBar
                android:id="@+id/seek_fg_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <SeekBar
                android:id="@+id/seek_fg_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_background_color"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="57dp"
                    tools:layout_editor_absoluteY="114dp" />

                <ImageView
                    android:id="@+id/background_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/black"
                    android:contentDescription="@string/preview_color" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bg_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <SeekBar
                android:id="@+id/seek_bg_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <SeekBar
                android:id="@+id/seek_bg_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="255" />

            <TextView
                android:id="@+id/textViewTs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_size"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/seek_textsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:max="96"
                android:min="4" />

            <TextView
                android:id="@+id/textViewTsSample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_size_sample"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/kg_or_lb_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:showText="true"
                android:text="@string/text_kg_or_lb"
                android:textColor="@android:color/white"
                android:textOff="@string/text_lb"
                android:textOn="@string/text_kg"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_settings_importexport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_import_export" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>